simple z-index fix

--- a/src/nuance_assets/screens/home/homepage.scss
+++ b/src/nuance_assets/screens/home/homepage.scss
@@ -680,6 +680,7 @@
         position: absolute;
         left: -157px;
         top: 320px;
+        z-index: -1;
       }
       .searchbar-wrapper {
         position: absolute;
